@@ -1,6 +1,6 @@
 #include "include.h"
 #include "ActionManager.h"
-
+#include "IMsgSenderCallback.h"
 
 CActionManager g_actionManager;
 
